# rastro

./: .gitignore  AGENTS.MD  CLAUDE.md  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/app/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_chat_message_thinking.sql  004_provider_masked_key.sql  005_custom_prompts.sql  006_annotations.sql  007_add_translation_tables.sql  008_obsidian_config.sql  009_perf_indexes.sql  010_deep_read.sql  011_drop_notebooklm_artifacts.sql  v2_document_workspace.sql
src-tauri/src/: app_state.rs  artifact_aggregator.rs  errors.rs  main.rs  models.rs
src-tauri/src/ai_integration/: chat_service.rs  mod.rs  provider_registry.rs  summary_service.rs  usage_meter.rs
src-tauri/src/ipc/: ai.rs  annotations.rs  deep_read.rs  document.rs  mod.rs  notebooklm.rs  obsidian.rs  settings.rs  title_translation.rs  translation.rs  translation_settings.rs  zotero.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/notebooklm_manager/: engine_supervisor.rs  http_client.rs  mod.rs
src-tauri/src/storage/: annotations.rs  chat_messages.rs  chat_sessions.rs  custom_prompts.rs  document_summaries.rs  documents.rs  migration.rs  migrations.rs  mod.rs  obsidian_config.rs  provider_settings.rs  title_translations.rs  translation_artifacts.rs  translation_jobs.rs  translation_provider_settings.rs  usage_events.rs
(+224 files in other folders)
