[package]
name = "rasto"
version = "0.1.0"
edition = "2021"
description = "Rasto - 科研文献阅读助手"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
